--- a/NProcessing.md.html
+++ b/NProcessing.md.html
@@ -1,13 +1,20 @@
 
 <meta charset="utf-8" emacsmode="-*- markdown -*-">
-<link rel="stylesheet" href="https://casual-effects.com/markdeep/latest/apidoc.css?">
+<link rel="stylesheet" href="https://casual-effects.com/markdeep/latest/slate.css?">
 
 # Usage
 - Basically open a .np file, press compile, then run.
 - Settings and log are in `C:\Users\<user>\AppData\Local\Ephemera\NProcessing`.
 
-# The Files
-See the Examples directory for material while perusing this. There's a bunch that were ported from the Processing world mainly to test.
+
+## Editing Scripts
+- Rather than spending the effort on a built-in script editor, I figured it would be easier for you to use your favorite external text editor. The application will watch for changes you make and indicate that recompile is needed.  
+- I use Sublime - you can associate .np files with .cs for pretty-close syntax coloring by:  
+  `View -> Syntax -> Open all with current extension as C#`
+
+
+## Example Script Files
+See the Examples directory for material while perusing the docs. There's a bunch that were ported from the Processing world, mainly to test.
 
 File | Description
 ---- | -----------
@@ -21,43 +28,54 @@ utils.np | Example of a library file for simple functions.
 temp\\\*.cs | Generated C# files which are compiled and executed.
 
 
+# Script Syntax
+
 This section describes the general structure and syntax rules of script files.  
 
 Script functions are very C#-like because essentially it is C# (without OO requirements). The compiler adds in the surrounding boilerplate and compiles the whole mess in memory where it executes.  
 
 Any functions specified by [Processing Functions](ScriptApiProcessing) are written here.  
 
-# General
+You can clean up your script file using [AStyle](http://astyle.sourceforge.net/).
+```
+AStyle --style=allman <your-file>
+```
+
+## General
 Double slash `//` is used for comments. C style `/* ... */` is not supported.  
 
 Names cannot have spaces or begin with a number.  
 
-# Script Classes
-Classes are supported (see utils.np) with one caveat. Because of the design of C# (unlike java/Processing), some hoops had to be jumped through to allow defined classes access to script properties and functions. It's not ideal but (for now at least) you need to use a qualification `s.`:
+## Script Classes
+Classes are supported (see utils.np).
 ```c#
 class klass
 {
     public void DoIt(int val)
     {
-        s.print("DoIt got:", val);
+        Print("DoIt got:", val);
     }
 ```
 
-# Include
+## Include
 A simple include mechanism is supplied in lieu of the Processing `import`. It's pretty much an insert-whole-file-body-here, no wildcard support. Tries absolute path first, then relative to current. It needs to be specified before contents are referenced. If one were to get grandiose, a true import could be implemented.
 ```c#
-#import "utils.np"
+Include(utils.np)
 ```
 
 
-The following sections list the supported elements in roughly the same structure as the [Processing API](https://processing.org/reference/). Refer to that document for API specifics.  
+# Script API
 
-There are lots of unimplemented functions and properties, including some of the overloaded flavors. If it's not implemented, you get either a compiler error or a runtime warning.  
+The following sections list the supported elements in roughly the same structure as the [Processing API](https://processing.org/reference/).
+Refer to that document for API specifics.  
 
-Note also that a lot of these have not been properly tested. Eventually there may be a real unit tester project.
+There are lots of unimplemented functions and properties, including some of the overloaded flavors. If it's not implemented,
+you get either a compiler error or a runtime warning.  
+
+Note also that a lot of these have not been properly tested. Eventually there may be a real unit test project.
 
 
-# Constants
+## Constants
 ```c#
 Math: QUARTER_PI, HALF_PI, PI, TWO_PI, TAU
 Mouse, keys: LEFT, UP, RIGHT, DOWN, CENTER
@@ -70,7 +88,8 @@ Cursor types: ARROW, CROSS, TEXT, WAIT, HAND, MOVE
 Misc: CLOSE
 ```
 
-# Classes
+## Classes
+
 ### color
 color is implemented here as a class rather than a packed unsigned int.
 ```c#
@@ -109,7 +128,7 @@ PFont(string name, int size)
 Font NativeFont
 ```
 
-# Structure
+## Structure
 ```c#
 virtual void draw() 
 void popStyle()
@@ -117,7 +136,7 @@ void pushStyle()
 virtual void setup() 
 ```
 
-# Environment
+## Environment
 ```c#
 bool focused 
 int frameCount 
@@ -131,13 +150,13 @@ void smooth(int level)
 int width 
 ```
 
-# Data
+## Data
 ```c#
 int @int(double val) 
 string str(object value) 
 ```
 
-### Data - String Functions
+### String Functions
 ```c#
 string join(string[] list, char separator)
 string[] split(string value, char delim)
@@ -147,14 +166,14 @@ string trim(string str)
 string[] trim(string[] array)
 ```
 
-### Data - Array Functions
+### Array Functions
 ```c#
 None implemented.
 ```
 
-# Shape
+## Shape
 
-### Shape - 2D Primitives
+### 2D Primitives
 ```c#
 void arc(double x1, double y1, double x2, double y2, double angle1, double angle2, int style)
 void arc(double x1, double y1, double x2, double y2, double angle1, double angle2)
@@ -166,25 +185,25 @@ void rect(double x1, double y1, double w, double h)
 void triangle(double x1, double y1, double x2, double y2, double x3, double y3)
 ```
 
-### Shape - Curves
+### Curves
 ```c#
 void bezier(int x1, int y1, int x2, int y2, int x3, int y3, int x4, int y4)
 void curve(int x1, int y1, int x2, int y2, int x3, int y3, int x4, int y4)
 ```
 
-### Shape - 3D Primitives
+### 3D Primitives
 ```c#
 None implemented.
 ```
 
-### Shape - Attributes
+### Attributes
 ```c#
 void strokeCap(int style)
 void strokeJoin(int style)
 void strokeWeight(int width) 
 ```
 
-### Shape - Vertex
+### Vertex
 ```c#
 void beginShape()
 void endShape()
@@ -192,14 +211,14 @@ void endShape(int mode)
 void vertex(int x, int y)
 ```
 
-### Shape - Loading & Displaying
+### Loading & Displaying
 ```c#
 None implemented.
 ```
 
-# Input
+## Input
 
-### Input - Mouse
+### Mouse
 ```c#
 int mouseButton 
 virtual void mouseClicked() 
@@ -216,7 +235,7 @@ int pMouseX
 int pMouseY 
 ```
 
-### Input - Keyboard
+### Keyboard
 ```c#
 char key 
 int keyCode
@@ -226,12 +245,12 @@ virtual void keyTyped()
 bool keyTypedP
 ```
 
-### Input - Files
+### Files
 ```c#
 string[] loadStrings(string filename)
 ```
 
-### Input - Time & Date
+### Time & Date
 ```c#
 int day() 
 int hour() 
@@ -242,30 +261,30 @@ int second()
 int year() 
 ```
 
-# Output
+## Output
 
-### Output - Text Area
+### Text Area
 ```c#
 void print(params object[] args)
 void printArray(params object[] what)
 ```
 
-### Output - Image
+### Image
 ```c#
 None implemented.
 ```
 
-### Output - Files
+### Files
 ```c#
 None implemented.
 ```
 
-### Output - PrintWriter
+### PrintWriter
 ```c#
 None implemented.
 ```
 
-# Transform
+## Transform
 ```c#
 void popMatrix() 
 void pushMatrix() 
@@ -275,14 +294,14 @@ void scale(double scx, double scy)
 void translate(double dx, double dy) 
 ```
 
-# Lights & Camera
+## Lights & Camera
 ```c#
 None implemented.
 ```
 
-# Color
+## Color
 
-### Color - Setting
+### Setting
 ```c#
 void background(int r, int g, int b, int a)
 void background(int r, int g, int b) 
@@ -313,7 +332,7 @@ void stroke(color pcolor, int a)
 void stroke(string scolor, int a) 
 ```
 
-### Color - Creating & Reading
+### Creating & Reading
 ```c#
 int alpha(color color) 
 int blue(color color) 
@@ -327,55 +346,55 @@ int red(color color)
 double saturation(color color) 
 ```
 
-# Image
+## Image
 
-### Image - Loading & Displaying
+### Loading & Displaying
 ```c#
 void image(PImage img, double x, double y)
 void image(PImage img, double x1, double y1, double x2, double y2)
 PImage loadImage(string filename)
 ```
 
-### Image - Textures
+### Textures
 ```c#
 None implemented.
 ```
 
-### Image - Pixels
+### Pixels
 ```c#
 None implemented.
 ```
 
-# Rendering - Shaders
+## Rendering - Shaders
 ```c#
 None implemented.
 ```
 
-# Typography
+## Typography
 
-### Typography - Loading & Displaying
+### Loading & Displaying
 ```c#
 PFont createFont(string name, int size)
 void text(string s, double x, double y)
 void textFont(PFont font)
 ```
 
-### Typography - Attributes
+### Attributes
 ```c#
 void textSize(int pts) 
 int textWidth(string s) 
 int textWidth(char ch) 
 ```
 
-### Typography - Metrics
+### Metrics
 ```c#
 int textAscent() 
 int textDescent() 
 ```
 
-# Math
+## Math
 
-### Math - Calculation
+### Calculation
 ```c#
 int abs(int val) 
 double abs(double val) 
@@ -403,7 +422,7 @@ double sqrt(double val)
 int truncate(double val) 
 ```
 
-### Math - Trigonometry
+### Trigonometry
 ```c#
 double acos(double val) 
 double asin(double val) 
@@ -416,7 +435,7 @@ double sin(double angle)
 double tan(double angle) 
 ```
 
-### Math - Random
+### Random
 ```c#
 double random(double max) 
 double random(double min, double max)
@@ -427,8 +446,10 @@ void randomSeed(int seed)
 ```
 
 
+#Porting from Processing
+
 It should be fairly easy to port simple Processing scripts using this guidance. It is somewhat modelled after [p5](https://github.com/processing/p5.js/wiki/Processing-transition).
-- `import` is not supported. If you have multiple files, you can use `#import`.
+- `import` is not supported. If you have multiple files, you can use `Inclue()`.
 - Change overridden functions like `void setup()` to `public override void setup()`.
 - Functions with the same name as intrinsic types need `@` e.g. `@int()`.
 - Processing default `float` type is not supported - change all to `double`. Change `boolean` type to `bool`.
@@ -450,10 +471,11 @@ After making these changes you can clean up your file using [AStyle](http://asty
 ```
 AStyle --style=allman <your-file>
 ```
+# Custom for this app
 
 The following sections list classes and functions added specifically for this application.
 
-# Midi
+## Midi
 Basic midi functionality has been added after enjoying the [Music Animation Machine](http://www.musanim.com).
 
 Access midi by configuring these settings fields:
@@ -477,29 +499,25 @@ int controllerValue: The controller payload.
 ```
 
 
+# Internals
+
 A place to store notes that don't fit anywhere else, like inside my head.
 
-# Internals
 
 - VS 2019 solution, targets .NET5 WinForms.
 - Uses Roslyn for in-memory compilation.
 - No installer yet, it's a build-it-yerself for now. Eventually a nuget package might be created.
-- Settings and log are in `C:\Users\<user>\AppData\Local\Ephemera\Nebulator`.
+- Settings and log are in `C:\Users\<user>\AppData\Local\Ephemera\NProcessing`.
 
 
-# Editing Scripts
-- Rather than spending the effort on a built-in script editor, I figured it would be easier for you to use your favorite external text editor. The application will watch for changes you make and indicate that recompile is needed.  
-- I use Sublime - you can associate .np files with .cs for pretty-close syntax coloring by:  
-  `View -> Syntax -> Open all with current extension as C#`
-
-# Graphics Processing
+## Graphics Processing
 - The app is all WinForms so I started with the builtin GDI+. Some weirdness/slowness started happening so I moved to
 [SkiaSharp](https://github.com/mono/SkiaSharp) which is a major improvement. I also tried OpenTK but it is a
 bit of a pain to set up consistently and sensitive to the GPU and OpenGL drivers installed.
 - [This graphics tool](http://kynosarges.org/WpfPerformance.html) was useful too.
 - Note that if you create an app with SkiaSharp, be sure to uncheck the Build config box "Prefer 32 bit".
 
-# Windows Key Handling
+## Windows Key Handling
 How windows handles key presses. For example Shift+A produces:
 - KeyDown: KeyCode=Keys.ShiftKey, KeyData=Keys.ShiftKey | Keys.Shift, Modifiers=Keys.Shift
 - KeyDown: KeyCode=Keys.A, KeyData=Keys.A | Keys.Shift, Modifiers=Keys.Shift
@@ -508,7 +526,7 @@ How windows handles key presses. For example Shift+A produces:
 - KeyUp: KeyCode=Keys.ShiftKey
 Also note that Windows steals TAB, RETURN, ESC, and arrow keys so they are not currently implemented.
 
-# Windows Mouse Handling
+## Windows Mouse Handling
 From (https://docs.microsoft.com/en-us/dotnet/framework/winforms/mouse-events-in-windows-forms).
 
 Mouse events occur in the following order:
@@ -524,7 +542,7 @@ MouseDown sequence looks like this:
 - MouseClick
 - MouseUp
 
-# Visual Studio
+## Visual Studio
 - VS2017 occasionally exhibits some bizarre behavior doing debug. Per the interwebs, disabling the Diagnostic Tools option in the debug settings appears to help.
 - Disable these warnings: IDE1006, CS1591.
 - After some update, these appeared:
